2018-05-11 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Gigabyte MG20-OP0-ZB product id and derived motherboards.

	* libfreeipmi/sel: Support Gigabyte MG20-OP0-ZB motherboard OEM
	sel events.

2018-05-11 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole.h.in: Update number of comments for
	clarity.

	* libipmimonitoring/ipmi_monitoring.h.in: Correct invalid comments
	return code from ipmi_monitoring_sel_iterator_next.

2018-05-03 Albert Chu <chu11@llnl.gov> and Anonymous

	* libfreeipmi/include/spec/ipmi-channel-spec.h,
	libfreeipmi/util/ipmi-channel-util.c: Update channel max from 0x7
	to 0xB per ipmi errata #409.

2018-03-08 Sevag Hanssian <sevag.hanssian@gmail.com>

	* ipmiseld/ipmiseld.c,
	ipmidetectd/ipmidetectd.c,
	bmc-watchdog/bmc-watchdog.c: Strip path from argv[0] in syslog

2018-02-20 Jo Fahlke <jorrit@jorrit.de>

	* ipmi-config/: Simplify legacy command scripts to not mangle
	shell parameters.
	
2018-02-16 GIRARD, MARC <marc.girard@atos.net>

	* libfreeipmi/api/ipmi-kcs-driver-api.c,
	libfreeipmi/api/ipmi-lan-session-common.c,
	libfreeipmi/api/ipmi-ssif-driver-api.c: When bridging, target the
	BMC LUN not the SMS LUN.
	
2018-01-18 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-common.c (ipmi_open): Fix error output
	corner case.  Newline necessary to allow pstdout library to output
	buffer on error.

	* common/toolcommon/pstdout.c (_pstdout_print): Fix debug build
	corner case.

2017-11-08 Michel Ferland <Michel.Ferland@kontron.com>

	* ipmipower/ipmipower_arg.c: Fix invalid parsing of
	--wait-until-on and --wait-until-off options.

2017-10-31 Bernd Zeimetz <bernd@bzed.de>

	* configure.ac: Fix cross compilation (bug #52290)

2017-09-22 Bernhard M. Wiedemann <bwiedemann@suse.de>

	* configure.ac: Use ChangeLog date instead of build date.

2017-08-13 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Add
	configuration support for static router ips.